[ADD] avance backUp

--- a/IEFI-GestionTramites/IEFI-GestionTramites.csproj
+++ b/IEFI-GestionTramites/IEFI-GestionTramites.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Models\Tramite.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\JornadaRepository.cs" />
     <EmbeddedResource Include="Forms\frmHistorial.resx">
       <DependentUpon>frmHistorial.cs</DependentUpon>
     </EmbeddedResource>
@@ -114,8 +115,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repositories\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
